# cmake

./: README.md
cmake_testting/testting_01/: CMakeLists.txt  main.cpp
cmake_testting/testting_02/: CMakeLists.txt  logger.h
cmake_testting/testting_03/: CMakeLists.txt  main.cpp
cmake_testting/testting_03/src/: logger.cpp
cmake_testting/testting_04/: CMakeLists.txt  Makefile  config.h.in  main.cpp
